2002-11-18  Jon K Hellan  <hellan@acm.org>

	* src/gui-file.c (gui_file_read): Display both errors and warning
	(accidentally left out of commit 2002-11-15).

	* src/main-application.c (main): Clear io context after displaying
	error.

2002-11-18  Morten Welinder  <terra@diku.dk>

	* configure.in (LIBS): Check for gdk_screen_get_width.

	* src/workbook-control-gui.c (wbcg_menu_state_update): Change
	tooltip also.
	(change_menu_label): Handle tooltip changing too.

	* src/io-context-gtk.c (icg_init_gui): Set size and position of
	splash screen.

2002-11-16  Morten Welinder  <terra@diku.dk>

	* src/sheet-autofill.c (autofill_cell): Don't use snprintf for no
 	reason.

2002-11-17   Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* stf.c (stf_open_and_read) : stf expects \0-terminated data. Make
	sure it is in fact \0-terminated.

2002-11-16   Andreas J. Guelzow  <aguelzow@taliesin.ca>

	* stf-parse.c (stf_parse_is_valid_data) : declare wstr only if
	HAVE_WCTYPE_H, don't read past the buffer end even if we encountered
	wide characters.

2002-11-16  Jon K Hellan  <hellan@acm.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=98661
	* src/file.c (gnum_file_opener_open): Set filename. Fixes

	* src/plugin-service.c (gnum_plugin_file_opener_open): No longer
	set filename.

2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/io-context-gtk.c (icg_init_gui): Make it dialog-like. More
	like a splash screen, but still possible to move it out of the way.

	(gnumeric_io_context_gtk_new): Declare void.

2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/io-context-gtk.c: Include libgnumeric.h
	(icg_init_gui): Declare static void.

	* src/Makefile.am (GNUMERIC_BASE): Add io-context-gtk.[ch]

2002-11-15  Jon K Hellan  <hellan@acm.org>

	* src/main-application.c (warn_about_ancient_gnumerics): Take an
	IOContext instead of a WorkbookControl.
	(main): Create an initial IOContextGtk if started with GUI, a
	CommandContextStderr otherwise. Call plugins_init earlier, but