@@ -501,7 +501,7 @@ AC_ARG_WITH(long_double,
 dnl Check for gtk-2.1 things
 SAVE_LIBS=$LIBS
 LIBS="$LIBS $GNUMERIC_LIBS"
-AC_CHECK_FUNCS(gdk_screen_get_width)
+AC_CHECK_FUNCS(gdk_screen_get_monitor_geometry)
 LIBS=$SAVE_LIBS
 
 dnl **************************************************
